<resources>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="rb_user">User</string>
    <string name="rb_admin">Admin</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="app_name">VERIFY IT</string>
    <string name="user_text">Enter employee details to register them for the service</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
</resources>