<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/body">
<!-- header bar-->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/top_navbar"
        android:gravity="start">

        <!-- Logo ImageView -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="122dp"
            android:layout_marginEnd="25dp"

            android:contentDescription="App Logo"
            android:src="@drawable/logo"
            tools:ignore="VisualLintBounds" />

        <!-- Title TextView -->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/appname"
            android:textColor="#424242"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="VisualLintBounds,TextSizeCheck" />
    </LinearLayout>


    <!-- creating radio group for user type selection before login / registration-->

    <RadioGroup
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/select_usertype"
        android:background="@color/radiogroup"
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:layout_height="wrap_content"
        >

        <!-- user radiobutton-->
        <RadioButton
            android:id="@+id/rb_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_user" />
        <!-- admin radio button-->
        <RadioButton
            android:id="@+id/rb_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_admin" />

    </RadioGroup>
<!-- bottom navigation bar -->


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignBottom="@+id/select_usertype"
        android:background="@color/black" />
    <LinearLayout
        android:id="@+id/landing_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="436dp"
        android:layout_marginEnd="86dp"
        android:padding="10dp">

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/login_button" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/register_button" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"

        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="SpeakableTextPresentCheck" />




</RelativeLayout>
